# FastHTML-Embeddings-Demo

./: .gitignore  .sesskey  Dockerfile  README.md  docker-compose.yml  embeddings.py  main.py  pyproject.toml  test.py  test.sh  wait-for-it.sh
data/: images.db  images.db-shm  images.db-wal
temp/: previous.py
